--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,6 +1,6 @@
 # Properties file with JDBC-related settings.
 jdbc.driverClass=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://127.0.0.1:3306/db_vrriding?SelectMode=cursor&zeroDateTimeBehavior=convertToNull&useUnicode=true&characterEncoding=UTF8&useServerPrepStmts=true
+jdbc.url=jdbc:mysql://127.0.0.1:3306/db_game?SelectMode=cursor&zeroDateTimeBehavior=convertToNull&useUnicode=true&characterEncoding=UTF8&useServerPrepStmts=true
 jdbc.user=root
 jdbc.password=111111
 jdbc.partitionCount=3
@@ -14,7 +14,7 @@ jdbc.statementsCacheSize=50
 jdbc.releaseHelperThreads=2
 # 登陆服务器
 jdbcLogin.driverClass=com.mysql.jdbc.Driver
-jdbcLogin.url=jdbc:mysql://127.0.0.1:3306/db_vrriding?SelectMode=cursor&zeroDateTimeBehavior=convertToNull&useUnicode=true&characterEncoding=UTF8&useServerPrepStmts=true
+jdbcLogin.url=jdbc:mysql://127.0.0.1:3306/db_game?SelectMode=cursor&zeroDateTimeBehavior=convertToNull&useUnicode=true&characterEncoding=UTF8&useServerPrepStmts=true
 jdbcLogin.user=root
 jdbcLogin.password=111111
 jdbcLogin.partitionCount=2
@@ -28,7 +28,7 @@ jdbcLogin.statementsCacheSize=50
 jdbcLogin.releaseHelperThreads=2
 # 后台管理服务器
 jdbcManage.driverClass=com.mysql.jdbc.Driver
-jdbcManage.url=jdbc:mysql://127.0.0.1:3306/db_vrriding?SelectMode=cursor&zeroDateTimeBehavior=convertToNull&useUnicode=true&characterEncoding=UTF8&useServerPrepStmts=true
+jdbcManage.url=jdbc:mysql://127.0.0.1:3306/db_game?SelectMode=cursor&zeroDateTimeBehavior=convertToNull&useUnicode=true&characterEncoding=UTF8&useServerPrepStmts=true
 jdbcManage.user=root
 jdbcManage.password=111111
 jdbcManage.partitionCount=2
