--- a/src/main/resources/jdbc-test.properties
+++ b/src/main/resources/jdbc-test.properties
@@ -1,8 +1,8 @@
 # Properties file with JDBC-related settings.
 jdbc.driverClass=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://192.168.1.100:3306/SuddenStrikeGameServer?SelectMode=cursor&zeroDateTimeBehavior=convertToNull&useUnicode=true&characterEncoding=UTF8&useServerPrepStmts=true
+jdbc.url=jdbc:mysql://127.0.0.1:3306/db_game?SelectMode=cursor&zeroDateTimeBehavior=convertToNull&useUnicode=true&characterEncoding=UTF8&useServerPrepStmts=true
 jdbc.user=root
-jdbc.password=123456
+jdbc.password=111111
 jdbc.partitionCount=3
 jdbc.acquireIncrement=10
 jdbc.idleMaxAge=2
@@ -15,9 +15,9 @@ jdbc.releaseHelperThreads=2
 
 # 登陆服务器
 jdbcLogin.driverClass=com.mysql.jdbc.Driver
-jdbcLogin.url=jdbc:mysql://192.168.1.100:3306/SuddenStrikeLoginServer?SelectMode=cursor&zeroDateTimeBehavior=convertToNull&useUnicode=true&characterEncoding=UTF8&useServerPrepStmts=true
+jdbcLogin.url=jdbc:mysql://127.0.0.1:3306/db_game?SelectMode=cursor&zeroDateTimeBehavior=convertToNull&useUnicode=true&characterEncoding=UTF8&useServerPrepStmts=true
 jdbcLogin.user=root
-jdbcLogin.password=123456
+jdbcLogin.password=111111
 jdbcLogin.partitionCount=2
 jdbcLogin.acquireIncrement=10
 jdbcLogin.idleMaxAge=2
@@ -30,11 +30,11 @@ jdbcLogin.releaseHelperThreads=2
 
 # 后台管理服务器
 jdbcManage.driverClass=com.mysql.jdbc.Driver
-jdbcManage.url=jdbc:mysql://127.0.0.1:3306/SeaManageServer?SelectMode=cursor&zeroDateTimeBehavior=convertToNull&useUnicode=true&characterEncoding=UTF8&useServerPrepStmts=true
+jdbcManage.url=jdbc:mysql://127.0.0.1:3306/db_game?SelectMode=cursor&zeroDateTimeBehavior=convertToNull&useUnicode=true&characterEncoding=UTF8&useServerPrepStmts=true
 #jdbcManage.url=jdbc:mysql://127.0.0.1:3306/test?SelectMode=cursor&zeroDateTimeBehavior=convertToNull&useUnicode=true&characterEncoding=UTF8&useServerPrepStmts=true&cachePrepStmts=true&prepStmtCacheSize=512
-#jdbcManage.url=jdbc:mysql://192.168.1.241:3306/SeaManageServer?SelectMode=cursor&zeroDateTimeBehavior=convertToNull&useUnicode=true&characterEncoding=UTF8&useServerPrepStmts=true
-jdbcManage.user=mappn
-jdbcManage.password=123456
+#jdbcManage.url=jdbc:mysql://192.168.1.241:3306/db_game?SelectMode=cursor&zeroDateTimeBehavior=convertToNull&useUnicode=true&characterEncoding=UTF8&useServerPrepStmts=true
+jdbcManage.user=root
+jdbcManage.password=111111
 jdbcManage.partitionCount=2
 jdbcManage.acquireIncrement=10
 jdbcManage.idleMaxAge=2
